# dht22-sensor

./: CMakeLists.txt  README.md
DEBIAN/: postinst  prerm
src/: sensor.c  sensor.h
systemd/: dht22-sensor.service
